修复了一些小错误然后开始添加es